code cleanup as per lint recomendations